k8s/timeseries/timeseries-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeseries
  namespace: backend
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: timeseries
  template:
    metadata:
      labels:
        app: timeseries
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
      - name: timeseries
        image: optimove-timeseries:0.0.9
        resources:
          limits:
            memory: "512Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/application.yml
          subPath: application.yml
        ports:
        - containerPort: 8080
      volumes:
      - name: config-volume
        configMap:
          name: timeseries-application-config
