k8s/timeseries/timeseries-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeseries
  namespace: backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: timeseries
  type: ClusterIP
  sessionAffinity: None
