k8s/timeseries/timeseries-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeseries-ingress
  namespace: backend
spec:
  rules:
    - http:
        paths:
          - path: /api/timeseries
            pathType: Prefix
            backend:
              service:
                name: timeseries
                port:
                  number: 8080
